Fix some spacing

--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,4 +1,4 @@
 .footer {
-  height: 150px;
-  background-color: #ffe4b5;
+  height: 10vh;
+  background-color: rgb(25, 163, 167);
 }
