--- a/src/Generic_Content.css
+++ b/src/Generic_Content.css
@@ -1,6 +1,5 @@
 .content {
   margin-left: 20%;
-  padding-top: 8rem;
 }
 
 .section_title {
